/**
 * 状态机常量
 */
public static class PlayerStateConstants
{
    public const string PlayerIdle = "Idle";
    public const string PlayerMove = "Move";
    public const string PlayerJump = "Jump";
    public const string PlayerYVelocity = "yVelocity";
    public const string PlayerDash = "Dash";
    public const string PlayerWallJump = "WallJump";
    public const string PlayerWallSlider = "WallSlider";
    public const string PlayerAttack = "Attack";
}